--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="container">
- <app-registration></app-registration>  <!--app give component name-->
-</div>
+ <!-- <div class="container">
+ <app-registration></app-registration>  app give component name
+</div>  -->
+<app-menu></app-menu>
