--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="primary">
     <mat-toolbar-row>
-        <button mat-icon-button>
-            <mat-icon (click)="sidenavtoggle();">menu</mat-icon>
-        </button>
+         <button mat-icon-button>
+            <mat-icon (click)="sidenave.toggle()">menu</mat-icon>
+        </button> 
         <h1>flipkart</h1>
     </mat-toolbar-row>
 </mat-toolbar>
@@ -20,5 +20,6 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <div style="height: 88vh;"></div>
+    
     </mat-sidenav-content>
 </mat-sidenav-container>  
